Update readme and release steps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,27 +31,22 @@ jobs:
         cp build/chrome/v3.zip chrome.zip
         cp build/firefox/v2.zip firefox.zip
 
-    - name: Upload Chrome Extension
-      uses: actions/upload-artifact@v3
-      with:
-        name: chrome-extension
-        path: chrome.zip
-
-    - name: Upload Firefox Extension
-      uses: actions/upload-artifact@v3
-      with:
-        name: firefox-extension
-        path: firefox.zip
-
     - name: Create GitHub Release
       uses: ncipollo/release-action@v1
       with:
         tag: ${{ github.ref_name }}
         name: ${{ github.ref_name }}
         body: |
-          Release for extensions:
-          - Chrome: [Download Chrome Extension](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/chrome.zip)
-          - Firefox: [Download Firefox Extension](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/firefox.zip)
+          Download pre-built extensions for your browser:
+          - Chrome/Chromium/Microsoft Edge: [chrome.zip](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/chrome.zip)
+          - Firefox: [firefox.zip](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/firefox.zip)
+
+          Manual Installation steps:
+          - Unzip the downloaded folder in some directory. (e.g. chrome.zip -> chrome/)
+
+          Now follow the steps for your browser:
+          - [Mozilla Firefox](https://extensionworkshop.com/documentation/develop/temporary-installation-in-firefox/)
+          - [Google Chrome/Chromium/Microsoft Edge](https://developer.chrome.com/docs/extensions/get-started/tutorial/hello-world#load-unpacked)
         artifacts: |
           chrome.zip
           firefox.zip
